// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`plugin vue with jsx 1`] = `
Object {
  ".js": Object {
    "code": "import { Fragment } from 'vue';
import {createVNode, isVNode} from 'vue';
const slice = Array.prototype.slice;
export function jsx(tag, props = null, children = null) {
  if (arguments.length > 3 || isVNode(children)) {
    children = slice.call(arguments, 2);
  }
  return createVNode(tag, props, children);
}

import {defineComponent} from \\"vue\\";
var scriptExports = defineComponent({
  name: \\"VueContentJsx\\",
  setup() {
    return () => /* @__PURE__ */ jsx(Fragment, null, /* @__PURE__ */ jsx(\\"h1\\", null, \\"VueContentJsx\\"));
  }
});
var options = typeof scriptExports === \\"function\\" ? scriptExports.options : scriptExports;
export default options;",
    "map": "",
  },
}
`;

exports[`plugin vue with ts 1`] = `
Object {
  ".js": Object {
    "code": "import {defineComponent} from \\"vue\\";
var scriptExports = defineComponent({
  name: \\"VueContentTs\\",
  setup() {
    const name = \\"VueContentTs\\";
  }
});
var options = typeof scriptExports === \\"function\\" ? scriptExports.options : scriptExports;
const defaultExport = options;
var render = function() {
  var _vm = this
  var _h = _vm.$createElement
  var _c = _vm._self._c || _h
  return _c(\\"h1\\", [_vm._v(\\"Vue Content Ts\\")])
}
var staticRenderFns = []
render._withStripped = true


defaultExport.render = render
defaultExport.staticRenderFns = staticRenderFns
export default defaultExport",
    "map": "",
  },
}
`;

exports[`plugin vue with tsx 1`] = `
Object {
  ".js": Object {
    "code": "import { Fragment } from 'vue';
import {createVNode, isVNode} from 'vue';
const slice = Array.prototype.slice;
export function jsx(tag, props = null, children = null) {
  if (arguments.length > 3 || isVNode(children)) {
    children = slice.call(arguments, 2);
  }
  return createVNode(tag, props, children);
}

import {defineComponent} from \\"vue\\";
var scriptExports = defineComponent({
  name: \\"VueContentTsx\\",
  setup() {
    const name = \\"VueContentTsx\\";
    return () => /* @__PURE__ */ jsx(Fragment, null, /* @__PURE__ */ jsx(\\"h1\\", null, \\"VueContentTsx\\"));
  }
});
var options = typeof scriptExports === \\"function\\" ? scriptExports.options : scriptExports;
export default options;",
    "map": "",
  },
}
`;
